# OpencvPortrait

./: import-summary.txt
app/: build.gradle
app/src/androidTest/java/com/xgn/opencvwithtesseract/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DetectionBasedTracker_jni.cpp  jni_part.cpp  main.cpp
app/src/main/java/org/opencv/samples/: ActivityCamera.java  MainActivity.java  PortraitCameraViewBase.java
app/src/main/java/org/opencv/samples/cameracalibration/: CameraCalibrationActivity.java  OnCameraFrameRender.java
app/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
app/src/main/java/org/opencv/samples/puzzle15/: Puzzle15Activity.java
app/src/main/java/org/opencv/samples/tutorial1/: Tutorial1Activity.java
app/src/main/java/org/opencv/samples/tutorial2/: Tutorial2Activity.java
app/src/main/java/org/opencv/samples/tutorial3/: Tutorial3Activity.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/xgn/opencvwithtesseract/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary331/: build.gradle
openCVLibrary331/src/main/: AndroidManifest.xml
